--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <div class="divider"></div>
                 </div>
                 <div class="five columns" style="margin-top: 5%">
-                    <p>Check out my <a href="">Chrome extension</a>, read some of my <a href="">blog</a> or take my <a href="">Final Year Project</a> out for a spin.</p>
-                    <p>You can see how my other projects are going on <a href="">GitHub</a>, or follow me on <a href="">Twitter</a>.</p>
+                    <p>Check out my <a href="https://chrome.google.com/webstore/developer/edit/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a>, read some of my <a href="http://blog.rokco.org">blog</a> or take my <a href="http://stijl.cf">Final Year Project</a> out for a spin.</p>
+                    <p>You can see how my other projects are going on <a href="https://github.com/xrokco">GitHub</a>, or follow me on <a href="https://twitter.com/Rokco_">Twitter</a>.</p>
                     <p>I did my internship for AWS, and will be returning there as a Cloud Support Associate. I have a knack for troubleshooting and I know my Linux.</p>
                     <p>I like <a href="http://matt.netsoc.co/plexrecs/">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
                 </div>
