--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="row" style="margin-top: 15%">
                 <div class="two columns"></div>
                 <div class="four columns">
-                    <h4>Matt Carrick</h4>
+                    <h4>MY NAme HEre</h4>
                     <div class="divider"></div>
                     <ul class="hiddenlist">
                         <li>UCC computer science graduate</li>
