fixed links, reverted sample

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="row" style="margin-top: 15%">
                 <div class="two columns"></div>
                 <div class="four columns">
-                    <h4>MY NAme HEre</h4>
+                    <h4>Matt Carrick</h4>
                     <div class="divider"></div>
                     <ul class="hiddenlist">
                         <li>UCC computer science graduate</li>
@@ -50,7 +50,7 @@
                     <p>Check out my <a href="https://chrome.google.com/webstore/detail/beautiful-new-tab/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a>, read some of my <a href="http://blog.rokco.org">blog</a> or take my <a href="http://stijl.cf">Final Year Project</a> out for a spin.</p>
                     <p>You can see how my other projects are going on <a href="https://github.com/xrokco">GitHub</a>, or follow me on <a href="https://twitter.com/Rokco_">Twitter</a>.</p>
                     <p>I did my internship for AWS, and will be returning there as a Cloud Support Associate. I have a knack for troubleshooting and I know my Linux.</p>
-                    <p>I like <a href="http://matt.netsoc.co/plexrecs/">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
+                    <p>I like <a href="http://rokco.org/movies/">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
                 </div>
             </div>
         </div>
