--- a/index.html
+++ b/index.html
@@ -15,28 +15,33 @@
         <link href="css/skeleton.css" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="css/normalize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="css/styles.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+        <!-- JS -->
+        <script src="particles.min.js"></script>
     </head>
     <body>
+        <div id="particles" class="left-triangle"></div>
+        <!--<div class="right-triangle"></div>-->
         <div class="container">
-            <div class="row" style="margin-top: 15%">
-                <div class="two columns"></div>
-                <div class="four columns">
+            <div id="content" class="row">
+                <!--<div class="two columns"></div>-->
+                <div class="four columns info">
                     <h4>Matt Carrick</h4>
                     <div class="divider"></div>
-                    <ul class="hiddenlist">
+                    <ul class="hiddenlist summary">
                         <li>UCC computer science graduate</li>
-                        <li>Amazon employee come August</li>
+                        <li>Cloud Support Associate at Amazon</li>
                     </ul>
                     <div class="divider"></div>
                     <div class="row">
-                        <div class="six columns">
+                        <div class="seven columns former">
                             <ul class="hiddenlist">
                                 <li><a href="mailto:matt@rokco.org">matt@rokco.org</a></li>
                                 <li><a href="https://github.com/xrokco">GitHub</a></li>
                                 <li><a href="https://www.linkedin.com/in/matt-carrick-00a89210a">LinkedIn</a></li>
                             </ul>
                         </div>
-                        <div class="six columns">
+                        <div class="five columns latter">
                             <ul class="hiddenlist">
                                 <li><a href="https://twitter.com/Rokco_">@rokco_</a></li>
                                 <li><a href="http://blog.rokco.org">Blog</a></li>
@@ -46,13 +51,17 @@
                     </div>
                     <div class="divider"></div>
                 </div>
-                <div class="five columns" style="margin-top: 5%">
+                <div class="five columns paragraph">
                     <p>Check out my <a href="https://chrome.google.com/webstore/detail/beautiful-new-tab/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a>, read some of my <a href="http://blog.rokco.org">blog</a> or take my <a href="http://stijl.cf">Final Year Project</a> out for a spin.</p>
                     <p>You can see how my other projects are going on <a href="https://github.com/xrokco">GitHub</a>, or follow me on <a href="https://twitter.com/Rokco_">Twitter</a>.</p>
-                    <p>I did my internship for AWS, and will be returning there as a Cloud Support Associate. I have a knack for troubleshooting and I know my Linux.</p>
+                    <p>I did my internship for AWS, and I am currently working there as a Cloud Support Associate. I have a knack for troubleshooting and I know my Linux.</p>
                     <p>I like <a href="http://rokco.org/movies/">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
                 </div>
             </div>
         </div>
+
+        <script type="text/javascript">
+            particlesJS.load('particles', 'particlesjs-config.json', function() {});
+        </script>
     </body>
 </html>
