--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="divider"></div>
                 </div>
                 <div class="five columns paragraph">
-                    <p>Check out my <a href="https://chrome.google.com/webstore/detail/beautiful-new-tab/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a>, read some of my <a href="http://blog.rokco.org">blog</a> or take my <a href="http://stijl.cf">Final Year Project</a> out for a spin.</p>
+                    <p>Check out my <a href="https://chrome.google.com/webstore/detail/beautiful-new-tab/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a>, read some of my <a href="http://blog.rokco.org">blog</a> or take my <a href="http://stijl.cc">Final Year Project</a> out for a spin.</p>
                     <p>You can see how my other projects are going on <a href="https://github.com/xrokco">GitHub</a>, or follow me on <a href="https://twitter.com/Rokco_">Twitter</a>.</p>
                     <p>I did my internship for AWS, and I am currently working there as a Cloud Support Associate. I have a knack for troubleshooting and I know my Linux.</p>
                     <p>I like <a href="http://movies.rokco.org/">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
