--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <title>Home | Rokco.org</title>
-        <link rel="icon" type="image/png" href="images/r.png">
 
         <!-- FONT -->
         <link href="https://fonts.googleapis.com/css?family=Muli:300,400" rel="stylesheet">
@@ -18,6 +17,15 @@
 
         <!-- JS -->
         <script src="particles.min.js"></script>
+
+        <!-- Favicon -- >
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <div id="particles" class="left-triangle"></div>
