--- a/cv/index.html
+++ b/cv/index.html
@@ -25,7 +25,13 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="../images/cv.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 <body>
@@ -35,7 +41,7 @@
 <div class="section header">
 	<div class="container">
 		<h2 class="title">Matt Carrick</h2>
-		<p style="text-align:center;margin:0px;">16 Catherine Street, Waterford</p>
+		<p style="text-align:center;margin:0px;">188 The Alliance, South Lott's Road, Dublin</p>
 		<p style="text-align:center;margin:0px;">matt@rokco.org | +353862057644 </p>
 	</div>
 </div>
@@ -113,13 +119,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="four columns">
-				<strong>March - August '16</strong>	
+				<strong>March '16 - August '16 (intern),</strong><br/>
+				<strong>August '16 - present</strong>	
 			</div>
 			<div class="four columns">
 				<strong>Amazon Web Services</strong>
 			</div>
 			<div class="four columns">
-				<strong>Cloud Support Associate intern</strong>
+				<strong>Cloud Support Associate</strong>
 			</div>
 		</div>
 	</div>
@@ -129,10 +136,10 @@
 		<div class="row">
 			<div class="twelve columns">
 				<ul>
-					<li>Case work involving troubleshooting customer issues and assisting them in fixing their problems</li>
-					<li>Received training in, and got familliar with many AWS services including EC2, ELB, ElasticBeanstalk and S3</li>
-					<li>Small software development projects, working on internal AWS Support systems. Included Python and AngularJS/JavaScript work</li>
-					<li>Received further advanced Linux and Networking training</li>
+					<li>Troubleshooting customer issues involving many AWS services and dealing with customers directly over email, via live chat or over the phone</li>
+					<li>Training and in depth experience with AWS DevOps services including ECS, Elastic Beanstalk, CodePipeline, CloudFormation and CodeBuild</li>
+					<li>Good experience with the core AWS services such as EC2, ELB, Autoscaling, EBS and IAM</li>
+					<li>Mentor of an intern for the six months they were with the company, as well as taking on the profile primary role within my team</li>
 				</ul>	
 			</div>
 		</div>
@@ -161,7 +168,7 @@
 		<div class="row">
 			<div class="twelve columns">
 				<ul>
-					<li>Became familiar with a Linux server environment</li>
+					<li>Linux server experience</li>
 					<li>Assembled, setup and installed a server to Cork Internet Exchange data center</li>
 					<li>Introduced to Docker containers</li>
 					<li>Setup automated server backup system, IRC server, video game servers and VOIP servers</li>
@@ -185,6 +192,7 @@
 					<li>Good computer networking knowledge and troubleshooting experience</li>
 					<li>Docker experience through Amazon ECS and Netsoc server administration</li>
 					<li>Experience with Git version control</li>
+					<li>Worked as profile primary in AWS, being the point of contact for one of a week for my team, and distributing customer contacts to engineers to be worked on</li>
 				</ul>
 			</div>
 			<div class="six columns">
