--- a/cv/index.html
+++ b/cv/index.html
@@ -126,7 +126,7 @@
 				<strong>Amazon Web Services</strong>
 			</div>
 			<div class="four columns">
-				<strong>Cloud Support Associate</strong>
+				<strong>Cloud Support Associate/Engineer</strong>
 			</div>
 		</div>
 	</div>
@@ -137,9 +137,10 @@
 			<div class="twelve columns">
 				<ul>
 					<li>Troubleshooting customer issues involving many AWS services and dealing with customers directly over email, via live chat or over the phone</li>
-					<li>Training and in depth experience with AWS DevOps services including ECS, Elastic Beanstalk, CodePipeline, CloudFormation and CodeBuild</li>
+					<li>Day-to-day usage of AWS' DevOps tools such as ECS, Elastic Beanstalk, CodePipeline, CloudFormation and CodeBuild</li>
 					<li>Good experience with the core AWS services such as EC2, ELB, Autoscaling, EBS and IAM</li>
-					<li>Mentor of an intern for the six months they were with the company, as well as taking on the profile primary role within my team</li>
+					<li>In the process of becoming familiar with OpsWorks, EKS, Service Catalog and other AWS services</li>
+					<li>Experience with third party tools used by AWS services such as Docker, Git, Kubernetes</li>
 				</ul>	
 			</div>
 		</div>
@@ -168,9 +169,8 @@
 		<div class="row">
 			<div class="twelve columns">
 				<ul>
-					<li>Linux server experience</li>
+					<li>Linux server administration experience</li>
 					<li>Assembled, setup and installed a server to Cork Internet Exchange data center</li>
-					<li>Introduced to Docker containers</li>
 					<li>Setup automated server backup system, IRC server, video game servers and VOIP servers</li>
 				</ul>	
 			</div>
@@ -192,15 +192,15 @@
 					<li>Good computer networking knowledge and troubleshooting experience</li>
 					<li>Docker experience through Amazon ECS and Netsoc server administration</li>
 					<li>Experience with Git version control</li>
-					<li>Worked as profile primary in AWS, being the point of contact for one of a week for my team, and distributing customer contacts to engineers to be worked on</li>
+					<li>Worked as profile primary in AWS, being the point of contact for one day a week for my team, and distributing customer contacts to engineers to be worked on</li>
 				</ul>
 			</div>
 			<div class="six columns">
 				<ul>
 					<li>HTML5, CSS and JavaScript, as well as libraries and frameworks such as jQuery, AngularJS, FabricJS and Materialize CSS</li>
-					<li>Some Java and Python experience</li>
+					<li>Bash and Python scripting experience</li>
 					<li>Basic knowledge of MySQL databases</li>
-					<li>PHP and the Laravel framework</li>
+					<li>Mentor for two separate new hires in AWS, helping guide them through their first few months</li>
 					<li>As PM of a large college team project, have experienced in delegating work as well as time and deadline management</li>
 				</ul>	
 			</div>
