--- a/cv/index.html
+++ b/cv/index.html
@@ -46,71 +46,6 @@
 	</div>
 </div>
 
-  <!-- Education section
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div style="margin-left:auto;margin-right:auto;max-width:960px">
-	<h4 class="subtitle">Education</h4>
-</div>
-
-	<!-- University
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="values">
-	<div class="container">
-		<div class="row">
-			<div class="four columns">
-				<strong>2012 - 2017</strong> 	
-			</div>
-			<div class="four columns">
-				<strong>University College Cork</strong>
-			</div>
-			<div class="four columns">
-				<strong>B.Sc. in Computer Science </strong>	
-			</div>
-		</div>
-		<br />
-		<div class="row">
-			<div class="four columns offset-by-four">
-				<p><em>Overall Results:</em></p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="four columns" style="border-top:1px solid #D3D3D3">
-				<ul>
-					<br/>
-					<li><em>4th Year - 71%</em></li>
-					<ul>
-						<li>Algorithms and Data Structures - 83%</li>
-						<li>Information Retrieval - 81%</li>
-						<li>Artificial Intelligence 1 - 71%</li>
-					</ul>
-				</ul>
-			</div>
-
-			<div class="four columns" style="border-top:1px solid #D3D3D3">
-				<ul>
-					<br/>
-					<li><em>3rd Year - 75%</em></li>
-					<ul>
-						<li>Client Side Programming - 93%</li>
-						<li>Web Systems Team Project - 81%</li>
-						<li>Software Engineering - 77%</li>
-					</ul>
-				</ul>
-			</div>
-
-			<div class="four columns" style="border-top:1px solid #D3D3D3">
-				<ul>
-					<br />
-					<li><em>2nd Year - 50%</em></li>
-					<ul>
-						<li>Database Design and Admin - 79%</li>
-						<li>Logic Design - 62%</li>
-					</ul>
-				</ul>
-			</div>
-		</div>
-	</div>
-</div>
 <div style="margin-left:auto;margin-right:auto;max-width:960px">
 	<h4 class="subtitle">Experience</h4>
 </div>
@@ -131,6 +66,7 @@
 		</div>
 	</div>
 </div>
+<br />
 <div class="values">
 	<div class="container">
 		<div class="row">
@@ -147,7 +83,7 @@
 	</div>
 </div>
 
-<div class="page-break"></div>
+<!--<div class="page-break"></div>-->
 
 <div class="values">
 	<div class="container">
@@ -164,6 +100,7 @@
 		</div>
 	</div>
 </div>
+<br />
 <div class="values">
 	<div class="container">
 		<div class="row">
@@ -178,6 +115,65 @@
 	</div>
 </div>
 
+<!-- Education section
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div style="margin-left:auto;margin-right:auto;max-width:960px">
+	<h4 class="subtitle">Education</h4>
+</div>
+
+	<!-- University
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div class="values">
+	<div class="container">
+		<div class="row">
+			<div class="four columns">
+				<strong>2012 - 2017</strong> 	
+			</div>
+			<div class="four columns">
+				<strong>University College Cork</strong>
+			</div>
+			<div class="four columns">
+				<strong>B.Sc. in Computer Science </strong>	
+			</div>
+		</div>
+		<div class="row">
+			<div class="four columns">
+				<ul>
+					<br/>
+					<li><em>4th Year - 71%</em></li>
+					<ul>
+						<li>Algorithms and Data Structures - 83%</li>
+						<li>Information Retrieval - 81%</li>
+						<li>Artificial Intelligence 1 - 71%</li>
+					</ul>
+				</ul>
+			</div>
+
+			<div class="four columns">
+				<ul>
+					<br/>
+					<li><em>3rd Year - 75%</em></li>
+					<ul>
+						<li>Client Side Programming - 93%</li>
+						<li>Web Systems Team Project - 81%</li>
+						<li>Software Engineering - 77%</li>
+					</ul>
+				</ul>
+			</div>
+
+			<div class="four columns">
+				<ul>
+					<br />
+					<li><em>2nd Year - 50%</em></li>
+					<ul>
+						<li>Database Design and Admin - 79%</li>
+						<li>Logic Design - 62%</li>
+					</ul>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
 
 <div style="margin-left:auto;margin-right:auto;max-width:960px">
 	<h4 class="subtitle">Skills</h4>
