--- a/cv/index.html
+++ b/cv/index.html
@@ -142,7 +142,7 @@
 					<br/>
 					<li><em>4th Year - 71%</em></li>
 					<ul>
-						<li>Algorithms and Data Structures - 83%</li>
+						<li>Algorithms & Data Structures - 83%</li>
 						<li>Information Retrieval - 81%</li>
 						<li>Artificial Intelligence 1 - 71%</li>
 					</ul>
