--- a/cv/index.html
+++ b/cv/index.html
@@ -188,16 +188,16 @@
 					<li>Good computer networking knowledge and troubleshooting experience</li>
 					<li>Docker experience through Amazon ECS and Netsoc server administration</li>
 					<li>Experience with Git version control</li>
-					<li>Worked as profile primary in AWS, being the point of contact for one day a week for my team, and distributing customer contacts to engineers to be worked on</li>
+					<li>Worked as profile primary in AWS, being the point of contact for the team during the busy shift and distributing customer contacts to engineers to be worked on based on priority</li>
 				</ul>
 			</div>
 			<div class="six columns">
 				<ul>
 					<li>HTML5, CSS and JavaScript, as well as libraries and frameworks such as jQuery, AngularJS, FabricJS and Materialize CSS</li>
 					<li>Bash and Python scripting experience</li>
-					<li>Basic knowledge of MySQL databases</li>
-					<li>Mentor for two separate new hires in AWS, helping guide them through their first few months</li>
-					<li>As PM of a large college team project, have experienced in delegating work as well as time and deadline management</li>
+					<li>Mentor for two separate new hires in AWS, guiding them through their first few months in the company and teaching them services</li>
+					<li>As manager of a large college team project, have experienced leading a team as well as delegating work and deadline management</li>
+					<li>Provided training and talks to new hires and new members of the team, including developing the CodeBuild onboarding training</li>
 				</ul>	
 			</div>
 		</div>
