--- a/cv/index.html
+++ b/cv/index.html
@@ -75,7 +75,7 @@
 					<li>Troubleshooting customer issues involving many AWS services and dealing with customers directly over email, via live chat or over the phone</li>
 					<li>Day-to-day usage of AWS' DevOps tools such as ECS, Elastic Beanstalk, CodePipeline, CloudFormation and CodeBuild</li>
 					<li>Good experience with the core AWS services such as EC2, ELB, Autoscaling, EBS and IAM</li>
-					<li>In the process of becoming familiar with OpsWorks, EKS, Service Catalog and other AWS services</li>
+					<li>Constantly learning new AWS services such as OpsWorks, EKS, Service Catalog and others</li>
 					<li>Experience with third party tools used by AWS services such as Docker, Git, Kubernetes</li>
 				</ul>	
 			</div>
