fixed full stop thanks Lucy

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="five columns latter">
                             <ul class="hiddenlist">
                                 <li><a href="https://twitter.com/Rokco_">@rokco_</a></li>
-                                <li><a href="http://blog.rokco.org">Blog</a></li>
+                                <!--<li><a href="http://blog.rokco.org">Blog</a></li>-->
                                 <li><a href="http://rokco.org/cv">CV</a></li>
                             </ul>
                         </div>
@@ -63,7 +63,7 @@
                     <p>You can see how my other projects are going on <a href="https://github.com/xrokco">GitHub</a>, or follow me on <a href="https://twitter.com/Rokco_">Twitter</a>.</p>
                     <p>I did my internship for AWS, and worked there for a few years as a Cloud Support Associate. I currently work for VectraAI as a DevOps engineer.</p>
                     <p>I like <a href="http://rokco.org/movies">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
-                    <p>I currently climb and travel around on a longboard to stay in shape</p>
+                    <p>I currently climb and travel around on a longboard to stay in shape.</p>
                 </div>
             </div>
         </div>
