added blog and new blog post

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="five columns latter">
                             <ul class="hiddenlist">
                                 <li><a href="https://twitter.com/Rokco_">@rokco_</a></li>
-                                <!--<li><a href="http://blog.rokco.org">Blog</a></li>-->
+                                <li><a href="http://rokco.org/blog">Blog</a></li>
                                 <li><a href="http://rokco.org/cv">CV</a></li>
                             </ul>
                         </div>
