--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         <div class="five columns latter">
                             <ul class="hiddenlist">
                                 <li><a href="https://twitter.com/Rokco_">@rokco_</a></li>
-                                <li><a href="http://rokco.org/blog">Blog</a></li>
-                                <li><a href="http://rokco.org/cv">CV</a></li>
+                                <li><a href="blog">Blog</a></li>
+                                <li><a href="cv">CV</a></li>
                             </ul>
                         </div>
                     </div>
