updated site text

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     <div class="divider"></div>
                 </div>
                 <div class="five columns paragraph">
-                    <p>Check out my <a href="https://chrome.google.com/webstore/detail/beautiful-new-tab/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a>, read some of my <a href="http://blog.rokco.org">blog</a> or take my <a href="http://stijl.cc">Final Year Project</a> out for a spin.</p>
+                    <p>Check out my <a href="https://chrome.google.com/webstore/detail/beautiful-new-tab/bailppllbndlpphoipdchcmiiefhelfh">Chrome extension</a> or read some of my <a href="blog">blog</a>.</p>
                     <p>You can see how my other projects are going on <a href="https://github.com/xrokco">GitHub</a>, or follow me on <a href="https://twitter.com/Rokco_">Twitter</a>.</p>
                     <p>I did my internship for AWS, and worked there for a few years as a Cloud Support Associate. I currently work for VectraAI as a DevOps engineer.</p>
-                    <p>I like <a href="http://rokco.org/movies">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
+                    <p>I like <a href="https://letterboxd.com/Rokco/films/diary/">movies</a> and <a href="https://open.spotify.com/user/1155679179">music</a>.</p>
                     <p>I currently climb and travel around on a longboard to stay in shape.</p>
                 </div>
             </div>
